# QQ_Chatgpt

./: README.md
xiaoxi/: docker-compose.yaml
xiaoxi/go_cqhttp/: .env.dev  Dockerfile  config.yml  docker_cmd  start.sh
xiaoxi/nonebot/: .env.dev  Dockerfile  README.md  bot.py  pyproject.toml  start.sh  stop.sh
xiaoxi/v2ray/: Dockerfile  config.json  start.sh
